Pong 1.0 Класса игры пока нет, но все работает. TODO 1. создать класс игры 2. создать границы для мяча, учитывающие радиус. Это упростит проверку отскоков и выхода за границы экрана 3. перевести физику на box2d 4. уточнить интерфейсы Player Ball Score

--- a/helloworld/helloworld.vcxproj.filters
+++ b/helloworld/helloworld.vcxproj.filters
@@ -24,6 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="Score.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="Ball.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="Options.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -32,5 +44,38 @@
     <ClCompile Include="helloworld.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="Score.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="Ball.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\res\ARCADECLASSIC.TTF">
+      <Filter>Файлы ресурсов</Filter>
+    </Font>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\res\Beep1.wav">
+      <Filter>Файлы ресурсов</Filter>
+    </Media>
+    <Media Include="..\res\Beep2.wav">
+      <Filter>Файлы ресурсов</Filter>
+    </Media>
+    <Media Include="..\res\Beep8.wav">
+      <Filter>Файлы ресурсов</Filter>
+    </Media>
+    <Media Include="..\res\Beep9.wav">
+      <Filter>Файлы ресурсов</Filter>
+    </Media>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\res\Visager_-_26_-_We_Can_Do_It_Loop.ogg">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
   </ItemGroup>
 </Project>
